Fix custom scrollbars for firefox

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,8 +3,12 @@
 @tailwind utilities;
 
 @layer base {
+  html {
+    @apply !scrollbar-thin !scrollbar-track-transparent !scrollbar-thumb-red-600;
+  }
+
   body {
-    @apply bg-[#141414] text-white !scrollbar-thin !scrollbar-track-transparent !scrollbar-thumb-red-600;
+    @apply bg-[#141414] text-white;
   }
 
   header {
